Refactor: Changes in Status Code
